Fixed add to cart button not showing properly

--- a/src/app/ecommerce/products/products.component.css
+++ b/src/app/ecommerce/products/products.component.css
@@ -1,4 +1,4 @@
 .padding-0 {
   padding-right: 0;
-  padding-left: 10px;
+  padding-left: 0;
 }
